# ml-pipeline-e2e-practica

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
acciones-data/: README.md  pyproject.toml
acciones-data/src/acciones_data/: __init__.py  configurar_forecast.py  descargar_datos.py  entrenar_autots.py  monitoreo_drift.py  pipeline_completo.py  predecir_forecast.py  transformar_datos.py  utils.py
anonimizar-datos/: README.md  pyproject.toml
anonimizar-datos/src/anonimizar_datos/: __init__.py
data/: bike_sharing_demand.csv
m5-forecast/: pyproject.toml
m5-forecast/src/m5_forecast/: __init__.py
notebooks/: demo_codigo_seguro.ipynb  demo_comparativa_modelos.ipynb  demo_pipeline_completo.ipynb  pipeline_e2e_demo.ipynb
src/: pipeline_anonimizacion.py  seguridad_pipeline.py  train_classification.py  train_regression.py
src/ml_pipeline_e2e_practica/: __init__.py  preprocesamiento_seguro.py
