[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "ml-pipeline-e2e-practica"
version = "0.1.0"
description = "Taller de Data Science seguro contra data leakage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"pandas",
	"scikit-learn",
	"numpy",
	"jupyter",
	"matplotlib",
	"acciones-data", # Opcional o ejecutar uv sync dentro del directorio del proyecto
]


[tool.uv.workspace]
members = [
    "acciones-data", # Necesario para considerarlo parte del workspace y usar el mismo .venv
]

[tool.uv.sources]
"acciones-data" = { workspace = true } # Necesario para poder instalar al añadir a dependencias

[tool.pyright]
pythonPath = ".venv/bin/python"
typeCheckingMode = "standard"
