[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "ml-pipeline-e2e-practica"
version = "0.1.0"
description = "Taller de Data Science seguro contra data leakage"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"pandas",
	"faker",
	"scikit-learn",
	"numpy",
	"acciones-data", # Opcional o ejecutar uv sync --directory acciones-data
	"anonimizar-datos", # Opcional o ejecutar uv sync --directory anonimizar-datos
]

[dependency-groups]
dev = [
    "seaborn>=0.13.2",
	"jupyter",
	"matplotlib",
]

[tool.uv.workspace]
members = [
    "acciones-data",
    "anonimizar-datos", # Necesario para considerarlo parte del workspace y usar el mismo .venv
]

[tool.uv.sources]
"acciones-data" = { workspace = true } # Necesario para poder instalar al añadir a dependencias
"anonimizar-datos" = { workspace = true } # Necesario para poder instalar al añadir a dependencias

[tool.pyright]
pythonPath = ".venv/bin/python"
typeCheckingMode = "standard"
