[project]
name = "anonimizar-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Axell", email = "68310020+axellpadilla@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas",
]

[project.scripts]
anonimizar-datos = "anonimizar_datos:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
