[project]
name = "acciones-data"
version = "0.1.0"
description = "Paquete para descargar precios de acciones de tecnología usando yfinance"
readme = "README.md"
authors = [
	{ name = "Axell Padilla", email = "68310020+axellpadilla@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
	"yfinance>=0.2.0",
	"pandas>=2.0",
	"numpy>=2.0",
]

[project.scripts]
descargar-acciones = "m5_forecast:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
